examples/test/testpolicy16845.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16845
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key47: value48
      key31: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value29
          key23: value31
          key38: value6
      podSelector:
        matchLabels:
          key30: value7
          key6: value37
